<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheWardrobe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mac_cloth">Cloth Editor</string>
    <string name="name">Name</string>
    <string name="part">Body Part</string>
    <string name="clothType">Cloth Type</string>
    <string name="season">Season</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="chest">Chest</string>
    <string name="feet">Feet</string>
    <string name="legs">Legs</string>
    <string name="insert_name">Name your cloth</string>
    <string name="insert_description">Insert a description</string>
    <string name="error_photo_saving">Error saving photograph</string>
    <string name="str_butt_save">Save</string>
    <string name="name_not_set">Please, name and take a picture of your cloth</string>
    <string name="menu_add">Add</string>
    <string name="menu_list">Wardrobe Collection</string>
    <string name="title_activity_list_cloth">Catalog</string>
    <string name="menu_update">Update</string>
    <string name="str_delete">Delete</string>
    <string name="str_edit">Edit</string>
    <string name="no_data">No data</string>
    <string name="action_ok">Ok</string>
    <string name="cloth_updated">Updated</string>
    <string name="cloth_added">Added</string>
    <string name="title_activity_details_cloth">Details</string>
    <string name="bodyPart">Body Part:</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_combiner">Wardrobe Combiner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_combiner">Combiner</string>
    <string name="title_activity_show_cloth">showClothActivity</string>
    <string name="action_details_ok">Ok</string>
    <string name="title_activity_combiner_fragment">CombinerFragment</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="menu_filter">Filter</string>
    <string name="select_filter">Select a filter</string>
    <string name="menu_list_combiner">Combinations</string>
    <string name="title_activity_list_combiner">My Combinations</string>
    <string name="alert_dialog_comb_name">Combination name:</string>
    <string name="select_source">Select source</string>
    <string name="str_comb_name">Combination Name</string>
    <string name="action_open_drawer">Open Drawer</string>
    <string name="action_close_drawer">Close Drawer</string>
    <string name="incomplete_combination">Incomplete Combination</string>
    <string name="confirm">Are you sure?</string>
    <string name="landscape">Please take a photograph in Landscape</string>
    <string name="title_activity_the_wardrobe_help">Help</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation"><u>Navigation</u></string>
    <string name="creation"><u>Cloth Creation</u></string>
    <string name="visualization"><u>Visualization</u></string>
    <string name="detailed_view">Detailed View</string>
    <string name="help_navigation_desc">Navigation inside the app is done through a side bar where you can select the different utilities of the app, you can access this menu by <b>touching the app title.</b></string>
    <string name="help_navigation_desc2">Alternatively you can slide your finger from the left border inwards.</string>
    <string name="help_ic_draw">Side menu icon</string>
    <string name="help_creation_desc">Initially your app wont have any clothes registered so you need to create some of them from your own physical wardrobe.</string>
    <string name="help_ic_add">To the creation cloth screen</string>
    <string name="help_creation_desc2">Once in the creation screen you need to introduce <b>a photograph, name, part of the body, cloth type, season, color</b> and optionally a description.</string>
    <string name="help_ic_camera">Select/Take picture</string>
    <string name="help_ic_save">Save cloth</string>
    <string name="help_ic_cancel">Cancel</string>
    <string name="help_visualization_desc">Multiple screen exits to visualize and organize your virtual wardrobe</string>
    <string name="help_catalog_desc">Catalog lets you access all your clothes in a list like view and <b>filter</b> them by some fields. If you click any of the list items it will show you all its details. On <b>long click</b> a contextual menu will appear to let you edit or remove the selected cloth</string>
    <string name="help_combinator_desc">The combinator lets you make your own combinations and store them.</string>
    <string name="help_ic_combinator">Save combination</string>
    <string name="help_combinations_desc">This screen shows you your saved combinations in a list like view, you can select any of them to check it out clearly on the combinator.</string>
    <string name="help_details_desc">The detailed view shows <b>all the attributes</b> of your clothes, edit, or remove them. It also lets you see similar clothes.</string>
    <string name="help_ic_edit">Edit cloth</string>
    <string name="help_ic_delete">Delete cloth</string>
    <string name="author_1">Jesús Seoane Vila</string>
    <string name="author_2">Lois Alberte Gómez Sánchez</string>
    <string name="str_butt_use">Use</string>
    <string name="most_popular">Most Popular</string>
    <string name="use_combination">Combination marked as used</string>
    <string name="help_ic_like_combinator">Register combination</string>

</resources>
