<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TheWardrobeMainActivity">
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/menu_add" />
    <item
        android:id="@+id/menu_list"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="never"
        android:title="@string/menu_list" />
    <item
        android:id="@+id/menu_list_combiner"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="always"
        android:title="@string/menu_list_combiner" />
    <item
        android:id="@+id/menu_combiner"
        android:icon="@android:drawable/ic_menu_agenda"
        android:showAsAction="always"
        android:title="@string/menu_combiner" />
</menu>
